--- a/src/Catalyst.Core.Modules.Web3/Catalyst.Core.Modules.Web3.csproj
+++ b/src/Catalyst.Core.Modules.Web3/Catalyst.Core.Modules.Web3.csproj
@@ -12,7 +12,9 @@
     <ItemGroup>
       <ProjectReference Include="..\Catalyst.Abstractions\Catalyst.Abstractions.csproj" />
       <ProjectReference Include="..\Catalyst.Core.Lib\Catalyst.Core.Lib.csproj" />
+      <ProjectReference Include="..\Catalyst.Core.Modules.Ledger\Catalyst.Core.Modules.Ledger.csproj" />
       <ProjectReference Include="..\Catalyst.Core.Modules.Mempool\Catalyst.Core.Modules.Mempool.csproj" />
+      <ProjectReference Include="..\Catalyst.Modules.Repository.CosmosDb\Catalyst.Modules.Repository.CosmosDb.csproj" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.3.1" />
